# basic-pattern-scanner

./: .gitignore  Cargo.toml  LICENSE  README.md
minimal-example/: Cargo.toml
minimal-example/scalar/: Cargo.toml
minimal-example/scalar/src/: main.rs
minimal-example/std-simd/: Cargo.toml
minimal-example/std-simd/src/: main.rs
src/: error.rs  lib.rs
src/pattern/: types.rs
src/scanner/: mod.rs  scalar.rs  scanner.rs  simd_std.rs  traits.rs  types.rs
