[package]
name = "basic_pattern_scanner"
version = "1.0.1"
edition = "2024"
description = "Fast no-dependencies byte-pattern scanner with IDA-style and nibble-mask pattern support"
license = "MIT"
readme = "README.md"
keywords = ["pattern", "scanner", "memory", "ida", "signature"]
repository = "https://github.com/EKQRCalamity/basic-pattern-scanner"

[dependencies]

[features]
default = []
simd_std_unstable = []
